Minor observation interface updates

--- a/docstrings/astro/element_conversion.yaml
+++ b/docstrings/astro/element_conversion.yaml
@@ -35,7 +35,7 @@ notes: |
   +-------+--------------------------------------------------------------------------------------+
   | ``0`` | Radial distance                                                                      |
   +-------+--------------------------------------------------------------------------------------+
-  | ``1`` | Latitude                                         s                                    |
+  | ``1`` | Latitude                                                                             |
   +-------+--------------------------------------------------------------------------------------+
   | ``2`` | Longitude                                                                            |
   +-------+--------------------------------------------------------------------------------------+
